@@ -348,9 +348,9 @@ s成大測量測不准園地	bbs.sv.ncku.edu.tw
 s成大楓醉小島	bbs.hyd.ncku.edu.tw
 s成大資工研究所 (重金屬精華區)	bbs.iie.ncku.edu.tw
 s成大資研站	ncku-iie.twbbs.org
-s成大資工最資心	goodguy.csie.ncku.edu.tw
+s成大資工醉資心	goodguy.csie.ncku.edu.tw
 s成大電機風之穀	bbs.ee.ncku.edu.tw
-s成大夢之大地	bbs.dorm.ncku.edu.tw
+s成大夢之大地	bbs.ccns.ncku.edu.tw
 s成大管弦好管弦事	orch.twbbs.org
 s成大醫學回風穀	bbs.med.ncku.edu.tw
 s成大機動車研究社	cmvs.twbbs.org
